docs: release: Minor adjustments to format, spelling and wording

--- a/docs/src/release/6.0.0.md
+++ b/docs/src/release/6.0.0.md
@@ -13,20 +13,20 @@
     version number to indicate that this is the successor of the legacy
     i.MX Dunfell BSP with version number v5.0.
 
-### General
+### General Information
 
 * Usage of `kas` integration tool, replacing the custom scripts used in previous
   BSPs
 * Usage of a new monorepo `meta-ked-bsp`, replacing the build and meta layer
   repositories used in previous BSPs
 
-### Components
+### Integrated Components
 
 * Yocto 4.0 LTS "Kirkstone" (layers compatible with 3.1 LTS "Dunfell")
 * Linux 6.1 LTS with KED backports and patches
 * U-Boot 2023.04 with KED backports and patches
 
-### Hardware
+### Supported Hardware
 
 | Product Numbers | Product Name | Product Type | Status |
 | --------------- | ------------ | ------------ | ------ |
@@ -40,7 +40,7 @@
 | 40099 176 | BL STM32 MP157 | Board | Not Supported (Planned) |
 | 40099 187<br>40099 220 | BL i.MX8M-Mini Quad | Board | Supported (Basic[^1]) |
 
-### Breaking Changes compared to Dunfell BSP (5.0)
+### Breaking Changes Compared to Dunfell BSP (5.0)
 
 * SPL and U-Boot proper images are now merged into a single `flash.bin` instead
   of two separate images.
