--- a/docs/src/release/6.1.0.md
+++ b/docs/src/release/6.1.0.md
@@ -20,36 +20,37 @@
 | 40099 176 | BL STM32 MP157 | Board | Not Supported (Planned) |
 | 40099 187<br>40099 220 | BL i.MX8M-Mini Quad | Board | Supported (Basic[^1]) |
 
-### Common changes for all plattforms
+### Core/Distro Changes (all HW Platforms)
 
-- Start of virtual terminal on tty0 deactivated in ktn distro (`USE_VT = "0"`)
+* Start of virtual terminal on `tty0` deactivated in `ked` distro (`USE_VT =
+  "0"`)
 
-### Changes for i.MX8 plattform
+### Changes for i.MX8 Platform
 
-- none
+* none
 
-### Changes for i.MX6 plattform
+### Changes for i.MX6 Platform
 
-- Added support for DPI display interface on BL boards (configuration `imx6ull-kontron-dl`)
-- u-boot: Default device tree boot configuration changed from `imx6ul-kontron-bl`
+* Added support for DPI display interface on BL boards (configuration `imx6ull-kontron-dl`)
+* u-boot: Default device tree boot configuration changed from `imx6ul-kontron-bl`
   to `imx6ull-kontron-dl`
-- linux: Changes in kernel config
-  - Virtual terminals deactivated (`CONFIG_VT`)
-  - Most resistive touch drivers removed
+* linux: Changes in kernel config
+  * Virtual terminals deactivated (`CONFIG_VT`)
+  * Most resistive touch drivers removed
 
-### Changes for STM32 MP1 plattform
+### Changes for STM32MP1 Platform
 
-- none
+* none
 
 ### Breaking Changes
 
-- i.MX6: Default u-boot configuration changed from SOC `ul` variant to `ull`
+* i.MX6: Default u-boot configuration changed from SOC `ul` variant to `ull`
   variant. So for `ul` variants the boot config has to be adapted manually in
   u-boot environment now!
 
 ### Known Issues
 
-Currently none
+* none
 
 [^1]: Basic support doesn't include all features of the board. Especially
       advanced peripherals like display, graphics, hardware acceleration units,
