docs: 6.0.0.md: Add further known issues

--- a/docs/src/release/6.0.0.md
+++ b/docs/src/release/6.0.0.md
@@ -57,6 +57,13 @@
 * The onboard USB hub on the BL i.MX8MM doesn't work in U-Boot.
 * The A/B boot scheme can be bricked by multiple updates with a broken kernel
   image.
+* The fw_getenv/setenv tools can't deal with the different possibilities for
+  the location of the U-Boot environment on i.MX8MM (SPI NOR, SD card, eMMC).
+* If the U-Boot environment for i.MX8MM is placed in the eMMC hardware partition
+  (boot0) it is not aligned to the end of the partition, but uses the same
+  fixed offset as on SPI NOR and SD card.
+* There is misconfigured dependency that requires the `xxd` tool to be installed
+  on the build host/container.
 
 [^1]: Basic support doesn't include all features of the board. Especially
       advanced peripherals like display, graphics, hardware acceleration units,
