docs: 6.1.0.md: Extend changelog

--- a/docs/src/release/6.1.0.md
+++ b/docs/src/release/6.1.0.md
@@ -24,12 +24,20 @@
 
 * Start of virtual terminal on `tty0` deactivated in `ked` distro (`USE_VT =
   "0"`)
+* Small CI improvements
+* Fix `xxd` host tool dependency (move to `goodix-touchconfig` recipe)
 
-### Changes for i.MX8 Platform
+### Changes for i.MX Platforms
+
+* Improve devshell settings for `u-boot-ktn` and `linux-ktn`
+* Enable `CONFIG_DYNAMIC_DEBUG` in `linux-ktn`
+* Fix an issue with fitImage selection in A/B boot flow
+
+#### Changes for i.MX8 Platform
 
 * none
 
-### Changes for i.MX6 Platform
+#### Changes for i.MX6 Platform
 
 * Added support for DPI display interface on BL boards (configuration `imx6ull-kontron-dl`)
 * u-boot: Default device tree boot configuration changed from `imx6ul-kontron-bl`
