docs: 6.1.0.md: Document remedies for i.MX8MM U-Boot environment issues

--- a/docs/src/release/6.1.0.md
+++ b/docs/src/release/6.1.0.md
@@ -37,6 +37,10 @@
 #### Changes for i.MX8 Platform
 
 * Add support for OSM-S/BL i.MX8MP hardware
+* Add a solution for `fw_getenv/setenv` to automatically use the environment
+  on the device that is used by the bootloader.
+* Move the U-Boot environment on the eMMC hardware partition (`boot0`) to the
+  end of the partition.
 
 #### Changes for i.MX6 Platform
 
@@ -57,15 +61,12 @@
 * i.MX6: Default u-boot configuration changed from SOC `ul` variant to `ull`
   variant. So for `ul` variants the boot config has to be adapted manually in
   u-boot environment now!
+* The location of the environment on the eMMC of i.MX8MM devices is moved to
+  the end of the `boot0` hardware partition.
 
 ### Known Issues
 
 * The onboard USB hub on the BL i.MX8MM doesn't work in U-Boot.
-* The fw_getenv/setenv tools can't deal with the different possibilities for
-  the location of the U-Boot environment on i.MX8MM (SPI NOR, SD card, eMMC).
-* If the U-Boot environment for i.MX8MM is placed in the eMMC hardware partition
-  (boot0) it is not aligned to the end of the partition, but uses the same
-  fixed offset as on SPI NOR and SD card.
 * Devices connected to the USB-C connector of the BL i.MX8MP before booting up
   the board are not detected and need to be reconnected after booting.
 
