docs: 6.1.0.md: Improve wording and format (avoid past tense)

--- a/docs/src/release/6.1.0.md
+++ b/docs/src/release/6.1.0.md
@@ -22,9 +22,9 @@
 
 ### Core/Distro Changes (all HW Platforms)
 
-* Start of virtual terminal on `tty0` deactivated in `ked` distro (`USE_VT =
+* Deactivate start of virtual terminal on `tty0` in `ked` distro (`USE_VT =
   "0"`)
-* Small CI improvements
+* Improve CI configuration
 * Fix `xxd` host tool dependency (move to `goodix-touchconfig` recipe)
 
 ### Changes for i.MX Platforms
@@ -39,10 +39,11 @@
 
 #### Changes for i.MX6 Platform
 
-* Added support for DPI display interface on BL boards (configuration `imx6ull-kontron-dl`)
-* u-boot: Default device tree boot configuration changed from `imx6ul-kontron-bl`
+* Add support for DPI display interface on BL boards (configuration
+  `imx6ull-kontron-dl`)
+* U-Boot: Change default device tree boot configuration from `imx6ul-kontron-bl`
   to `imx6ull-kontron-dl`
-* linux: Changes in kernel config
+* Linux: Changes in kernel config
   * Virtual terminals deactivated (`CONFIG_VT`)
   * Most resistive touch drivers removed
 
