docs: 6.1.0.md: Describe component version updates

--- a/docs/src/release/6.1.0.md
+++ b/docs/src/release/6.1.0.md
@@ -2,8 +2,8 @@
 
 ### Integrated Components
 
-* Yocto 4.0 LTS "Kirkstone" (4.0.10). Layers compatible with 3.1 LTS "Dunfell"
-* Linux 6.1 LTS (6.1.29+) with KED backports and patches
+* Yocto 4.0 LTS "Kirkstone" (4.0.12). Layers compatible with 3.1 LTS "Dunfell"
+* Linux 6.1 LTS (6.1.45) with KED backports and patches
 * U-Boot 2023.04 with KED backports and patches
 
 ### Supported Hardware
@@ -27,12 +27,16 @@
   "0"`)
 * Improve CI configuration
 * Fix `xxd` host tool dependency (move to `goodix-touchconfig` recipe)
+* Update to Yocto 4.0.12 and 3.1.27
+* Update all meta layers
 
 ### Changes for i.MX Platforms
 
 * Improve devshell settings for `u-boot-ktn` and `linux-ktn`
 * Enable `CONFIG_DYNAMIC_DEBUG` in `linux-ktn`
 * Fix an issue with fitImage selection in A/B boot flow
+* Update to Linux 6.1.45
+* Update U-Boot patches
 
 #### Changes for i.MX8 Platform
 
