docs: 6.1.0.md: Update known issues

--- a/docs/src/release/6.1.0.md
+++ b/docs/src/release/6.1.0.md
@@ -73,7 +73,12 @@ date: "2023-09-13"
 
 ### Known Issues
 
+* Regression: SWUpdate can fail with the error message:
+  `Configuration file /etc/fw_env.config wrong or corrupted`
 * The onboard USB hub on the BL i.MX8MM doesn't work in U-Boot.
+* On i.MX8MM hardware UART4 is assigned to the M4 domain by default and can not
+  be used from the A53 domain (Linux). Enabling it in the Linux DT causes a
+  crash.
 * Devices connected to the USB-C connector of the BL i.MX8MP before booting up
   the board are not detected and need to be reconnected after booting.
 
