--- a/docs/src/release/6.1.1.md
+++ b/docs/src/release/6.1.1.md
@@ -1,7 +1,7 @@
 ---
-date: "2023-10-12"
+date: "2023-10-16"
 ---
-## Changes from 6.1.0 to Dev (Work In Progress)
+## Changes from 6.1.0 to 6.1.1
 
 ### Integrated Components
 
