docs: Document bootcmd problem for i.MX8MP as known issue

--- a/docs/src/release/6.1.0.md
+++ b/docs/src/release/6.1.0.md
@@ -81,6 +81,10 @@ date: "2023-09-13"
   crash.
 * Devices connected to the USB-C connector of the BL i.MX8MP before booting up
   the board are not detected and need to be reconnected after booting.
+* On i.MX8MP the default boot command in the U-Boot environment is 'fastboot'
+  which causes the boot to halt without any messages on the console. You can
+  use the command `setenv bootcmd run vendor_bootcmd; saveenv` in the U-Boot
+  console as a workaround.
 
 [^1]: Basic support doesn't include all features of the board. Especially
       advanced peripherals like display, graphics, hardware acceleration units,
