--- a/docs/src/release/6.1.1.md
+++ b/docs/src/release/6.1.1.md
@@ -55,6 +55,10 @@ date: "2023-10-16"
 * The onboard USB hub on the BL i.MX8MM doesn't work in U-Boot.
 * Devices connected to the USB-C connector of the BL i.MX8MP before booting up
   the board are not detected and need to be reconnected after booting.
+* On i.MX8MP the default boot command in the U-Boot environment is 'fastboot'
+  which causes the boot to halt without any messages on the console. You can
+  use the command `setenv bootcmd run vendor_bootcmd; saveenv` in the U-Boot
+  console as a workaround.
 
 [^1]: Basic support doesn't include all features of the board. Especially
       advanced peripherals like display, graphics, hardware acceleration units,
